add the comment

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     </head>
     <body>
+    <!-- add a comment -->
 		<div class="app" id="app">
 			<div class="barview-bar">
 				<a href="#app/favorites" class="js-route actionBar-item">个人收藏</a>
