--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     </head>
     <body>
-    <!-- add a comment -->
+    <!-- add a comment adfasdf-->
 		<div class="app" id="app">
 			<div class="barview-bar">
 				<a href="#app/favorites" class="js-route actionBar-item">个人收藏</a>
